--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ focalnet/__pycache__/
 # C extensions
 *.so
 CREATE_PKG.MD
+
+
 # Distribution / packaging
 .Python
 build/
@@ -29,7 +31,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+.pytest_cache
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
